# todo-list-django-drf-jwt-python

./: .env  .gitignore  Dockerfile  django.sh  docker-compose.yml  pyproject.toml  readme.md  test.rest
todo_project/: settings.py  urls.py
todos/: models.py  serializers.py  urls.py  views.py
todos/migrations/: 0001_initial.py
users/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
